--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A senior-friendly AI interface",
   "main": "index.js",
   "dependencies": {
-    "openai": "^3.2.1"
+    "axios": "^3.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
